<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logDisplayTextView"
        android:layout_width="390dip"
        android:layout_height="200dip"
        android:text="Hello World!"
        android:layout_marginTop="16dip"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174" />

    <TextView
        android:id="@+id/exerciseLabelTextView"
        android:layout_width="103dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/exercise"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logDisplayTextView"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/exerciseInputEditText"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:autofillHints="@string/enter_an_exercise"
        android:hint="@string/enter_an_exercise"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/exerciseLabelTextView"
        app:layout_constraintStart_toEndOf="@id/exerciseLabelTextView"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/weight"
        android:textSize="24dp"
        android:id="@+id/weightLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/exerciseLabelTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/weightInputEditText"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:autofillHints="@string/enter_an_exercise"
        android:hint="@string/enter_a_weight"
        android:inputType="number|numberDecimal"
        android:padding="8dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightLabelTextView"
        app:layout_constraintStart_toEndOf="@id/weightLabelTextView"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/reps"
        android:textSize="24dp"
        android:id="@+id/repLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/weightLabelTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/repInputEditText"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:autofillHints="@string/enter_an_exercise"
        android:hint="Enter Number of Reps"
        android:inputType="number|numberDecimal"
        android:padding="8dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/repLabelTextView"
        app:layout_constraintStart_toEndOf="@id/repLabelTextView"
        tools:ignore="TextContrastCheck" />

    <Button
        android:layout_width="390dp"
        android:layout_height="205dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repInputEditText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/log"
        android:id="@+id/logButton"
        android:textSize="80sp" />


</androidx.constraintlayout.widget.ConstraintLayout>